--- a/composer.json
+++ b/composer.json
@@ -5,6 +5,7 @@
         "psr-0": {"Moflet": "src/"}
     },
     "require": {
-        "php": ">=5.3.3"
+        "php": ">=5.3.3",
+        "j4mie/paris": ">=1.2.0"
     }
 }
